--- a/EECIP/Views/ForumAdmin/_CategoryFields.cshtml
+++ b/EECIP/Views/ForumAdmin/_CategoryFields.cshtml
@@ -1,5 +1,4 @@
-﻿@*@using MVCForum.Website.Application.ExtensionMethods*@
-@model EECIP.Models.vmForumAdminCategory
+﻿@model EECIP.Models.vmForumAdminCategory
 <div class="panel-body">
 
     @*<div class="form-group">
